--- a/common/common.css
+++ b/common/common.css
@@ -93,9 +93,12 @@ a:hover, a:focus {
 button {
     text-align: center;
     cursor: pointer;
+    transition: all 0.9s, color 0.3s;
+    height: 25px;
 }
 
 button:hover {
     color: #fff;
     background-color: darkgray;
+    box-shadow: 0 25px 0 0 rgba(0, 0, 0, 0.25) inset, 0 -25px 0 0 rgba(0, 0, 0, 0.25) inset;
 }
